[package]
name = "oxideav-image-filter"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-image-filter"
authors = ["Mark Karpeles"]
description = "Pure-Rust single-frame image filters (blur, edge, resize, ...) for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-image-filter"
keywords = ["multimedia", "video", "image", "filter", "effects"]
categories = ["multimedia::video"]

[dependencies]
oxideav-core = "0.1"
serde_json = "1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
